图表功能研究一

--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -2,10 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_0"
-    android:layout_weight="1"
-    android:background="@color/gray_f7f7f7"
-    android:layout_marginTop="@dimen/dp_9">
+    android:layout_height="match_parent"
+    android:background="@color/gray_f7f7f7">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tl_aty_sms_add_student_title"
