--- a/app/src/main/res/layout/layout_markview.xml
+++ b/app/src/main/res/layout/layout_markview.xml
@@ -5,10 +5,12 @@
     android:orientation="vertical">
 
     <TextView
+        android:text="35单"
         android:id="@+id/tv_value0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_3"
+        android:paddingBottom="@dimen/dp_4"
         android:background="@mipmap/ic_num"
         android:gravity="center"
         android:textColor="@android:color/white"
