--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -16,7 +16,7 @@
     <item name="jz_fullscreen_id" type="id" />
     <item name="jz_tiny_id" type="id" />
 
-
+    <item name="cb" type="id" />
 
 
 
