--- a/app/src/main/res/layout/item_checkbox_list.xml
+++ b/app/src/main/res/layout/item_checkbox_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_90">
         <CheckBox
-            android:id="@+id/cb_item_fragment_shopping_cart_commodity_list_select"
+            android:id="@id/cb"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_width="@dimen/dp_40"
             style="@style/circlecheckbox"
@@ -89,48 +89,6 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent" />
-
-                <LinearLayout
-                    android:id="@+id/ll_add_delete"
-                    android:layout_width="@dimen/dp_80"
-                    android:layout_marginTop="@dimen/dp_3"
-                    android:layout_marginBottom="@dimen/dp_3"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="11dp"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/tv_item_fragment_shopping_cart_commodity_list_number_reduce"
-                        android:layout_width="@dimen/dp_24"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_angle_gray"
-                        android:gravity="center"
-                        android:text="一"
-                        android:textColor="@color/grey_color1"
-                        android:textSize="@dimen/dp_14" />
-
-                    <TextView
-                        android:id="@+id/tv_item_fragment_shopping_cart_commodity_list_number"
-                        android:layout_width="@dimen/dp_24"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_angle"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:text="1"
-                        android:textColor="@color/grey_color1"
-                        android:textSize="@dimen/dp_14" />
-
-                    <TextView
-                        android:id="@+id/tv_item_fragment_shopping_cart_commodity_list_number_add"
-                        android:layout_width="@dimen/dp_24"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_angle_right"
-                        android:gravity="center"
-                        android:text="+"
-                        android:textColor="@color/grey_color1"
-                        android:textSize="@dimen/dp_14" />
-                </LinearLayout>
-
 
             </LinearLayout>
         </LinearLayout>
