Android Studio、SDK版本适配处理002

--- a/app/src/main/res/drawable/shape_round_blue.xml
+++ b/app/src/main/res/drawable/shape_round_blue.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="@color/blue" />
+    <solid android:color="#2A8EE3" />
 </shape>
