--- a/app/src/main/res/drawable/shape_round_orange.xml
+++ b/app/src/main/res/drawable/shape_round_orange.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="@color/orange" />
+    <solid android:color="#FFE8A140" />
 </shape>
