--- a/app/src/main/res/drawable/shape_square.xml
+++ b/app/src/main/res/drawable/shape_square.xml
@@ -3,8 +3,8 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="1px"
-        android:color="@color/transparent_gray" />
-    <solid android:color="@color/transparent_gray" />
+        android:color="#90000000" />
+    <solid android:color="#90000000" />
     <padding
         android:bottom="5dp"
         android:left="5dp"
