--- a/app/src/main/res/layout/dialog_basic.xml
+++ b/app/src/main/res/layout/dialog_basic.xml
@@ -17,7 +17,8 @@
 
     <TextView
         android:id="@+id/tv"
-        style="@style/tv_gray_28px"
+        android:width="@dimen/jz_start_button_w_h_fullscreen"
+        android:height="@dimen/jz_start_button_w_h_fullscreen"
         android:layout_marginBottom="@dimen/dp_30"
         android:layout_marginLeft="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
@@ -26,7 +27,6 @@
         android:lineSpacingMultiplier="1.3"
         />
 
-    <include layout="@layout/line_h" />
 
     <LinearLayout
         android:id="@+id/button_group"
@@ -34,11 +34,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone">
-        <include layout="@layout/dialog_button"  />
-        <TextView
-            android:layout_width="1px"
-            android:layout_height="match_parent"
-            android:background="@color/lighter_gray" />
-        <include layout="@layout/dialog_button" />
+
     </LinearLayout>
 </LinearLayout>
