--- a/app/src/main/res/layout/dialog_button.xml
+++ b/app/src/main/res/layout/dialog_button.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/tv_gray_28px"
-    android:textSize="@dimen/sp_15"
-    android:id="@+id/ok"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_38"
-    android:minHeight="@dimen/dp_38"
-    android:gravity="center"
-    android:layout_weight="1"
-    android:textColor="@color/black"
-    />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+</LinearLayout>
