相机拍照，相册选取照片裁剪。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -977,7 +977,7 @@
                         android:layout_weight="0.5"
                         android:background="#ffff00"
                         android:scaleType="centerCrop"
-                        android:text="测试"
+                        android:text="相机测试"
                         android:textSize="@dimen/dp_10" />
 
                     <Button
