1、nfc功能完善。 2、添加设置界面，待完善。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -987,7 +987,7 @@
                         android:layout_weight="0.5"
                         android:background="#00ffff"
                         android:scaleType="centerCrop"
-                        android:text="测试"
+                        android:text="设置"
                         android:textSize="@dimen/dp_10" />
 
                     <Button
